--- a/vialytics-api/pyproject.toml
+++ b/vialytics-api/pyproject.toml
@@ -8,6 +8,10 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "pydantic>=2.0.0",
+    "requests>=2.31.0",
+    "fastapi>=0.104.0",
+    "uvicorn>=0.24.0"
 ]
 
 [tool.poetry]
