--- a/app/.env.example
+++ b/app/.env.example
@@ -1,2 +1,3 @@
-# Add your Gemini API key here
-VITE_GEMINI_API_KEY=your_gemini_api_key_here
+# Get FREE Groq API key at: https://console.groq.com/keys
+
+VITE_GROQ_API_KEY=your_groq_api_key_here
