--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -39,7 +39,7 @@ RUN pip install --no-cache-dir poetry
 # Copy and install Python deps
 COPY vialytics-api/pyproject.toml vialytics-api/poetry.lock ./
 RUN poetry config virtualenvs.create false && \
-    poetry install --only main --no-interaction --no-ansi
+    poetry install --only main --no-interaction --no-ansi --no-root
 
 # Copy Python source
 COPY vialytics-api/src ./src
