--- a/app/vercel.json
+++ b/app/vercel.json
@@ -21,7 +21,7 @@
     "rewrites": [
         {
             "source": "/api/:path*",
-            "destination": "https://vialytics-api.railway.app/api/:path*"
+            "destination": "https://vialytics-production.up.railway.app/api/:path*"
         }
     ]
 }
