--- a/app/vercel.json
+++ b/app/vercel.json
@@ -22,6 +22,10 @@
         {
             "source": "/api/:path*",
             "destination": "https://vialytics-production.up.railway.app/api/:path*"
+        },
+        {
+            "source": "/(.*)",
+            "destination": "/index.html"
         }
     ]
 }
