--- a/app/vercel.json
+++ b/app/vercel.json
@@ -24,6 +24,9 @@
             "destination": "https://vialytics-production.up.railway.app/api/:path*"
         },
         {
+            "handle": "filesystem"
+        },
+        {
             "source": "/(.*)",
             "destination": "/index.html"
         }
